bk_ida/gccida/c0/schedule_more_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_more_p/src/sched-rgn.c:2443:31: error: use of undeclared identifier 'target_n_insns_0'; did you mean 'target_n_insns'?
return sched_target_n_insns < target_n_insns_0; 
                              ^~~~~~~~~~~~~~~~
                              target_n_insns
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_more_p/src/sched-rgn.c:1956:12: note: 'target_n_insns' declared here
static int target_n_insns;
           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_more_p/src/obj/sched-rgn.o] Error 1
